added squeeze/stretch constants for rows and columns of node layers

--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
             const NODE_LAYERS = 14;
             const NODE_LAYER_ROWS = 5;
             const NODE_LAYER_ID_PREFIX = "node_layer_";
-            const NODE_COL_SQUEEZE_FACTOR = 0.30;
+            const NODE_ROW_SQUEEZE_FACTOR = 1.2;
+            const NODE_COL_SQUEEZE_FACTOR = 0.3;
             const NODE_LAYERS_EASE_FN = "cubic";
             const NODE_LAYERS_EASE_DURATION_MS = 1500;
             const NODE_LAYERS_FINAL_OPACITY = 1;
@@ -172,9 +173,9 @@
                             .append("use")
                             .attr("class", "random_node_layer" + (col_idx % 2 ? " random_node_layer_even" : " random_node_layer_odd"))
                             .attr("xlink:href", "#" + random_node_layer_id());
-                        var col_shift = (col_idx % 2) ? 0 : node_layer_max_height / 2;
+                        var col_shift = (col_idx % 2) ? 0 : node_layer_max_height / 2 * NODE_ROW_SQUEEZE_FACTOR;
                         var row_shift = node_layer_max_width / 2;
-                        $('#' + layer_id).css("top", num_as_px(row_idx * (node_layer_max_height + node_layer_margin.top + node_layer_margin.bottom) - col_shift));
+                        $('#' + layer_id).css("top", num_as_px(row_idx * NODE_ROW_SQUEEZE_FACTOR * (node_layer_max_height + node_layer_margin.top + node_layer_margin.bottom) - col_shift));
                         $('#' + layer_id).css("left", num_as_px(col_idx * NODE_COL_SQUEEZE_FACTOR * (node_layer_max_width + node_layer_margin.left + node_layer_margin.right) - row_shift));
                     }
                 }
@@ -192,11 +193,11 @@
                 for (var row_idx = 0; row_idx < node_layer_rows; row_idx++) {
                     for (var col_idx = 0; col_idx < node_layer_cols; col_idx++) {
                         var layer_id = row_idx + "_" + col_idx;
-                        var col_shift = (col_idx % 2) ? 0 : node_layer_max_height / 2;
+                        var col_shift = (col_idx % 2) ? 0 : node_layer_max_height / 2 * NODE_ROW_SQUEEZE_FACTOR;
                         var row_shift = node_layer_max_width / 2;
                         $('#' + layer_id).css("width", node_layer_max_width + node_layer_margin.left + node_layer_margin.right);
                         $('#' + layer_id).css("height", node_layer_max_height + node_layer_margin.top + node_layer_margin.bottom);
-                        $('#' + layer_id).css("top", num_as_px(row_idx * (node_layer_max_height + node_layer_margin.top + node_layer_margin.bottom) - col_shift));
+                        $('#' + layer_id).css("top", num_as_px(row_idx * NODE_ROW_SQUEEZE_FACTOR * (node_layer_max_height + node_layer_margin.top + node_layer_margin.bottom) - col_shift));
                         $('#' + layer_id).css("left", num_as_px(col_idx * NODE_COL_SQUEEZE_FACTOR * (node_layer_max_width + node_layer_margin.left + node_layer_margin.right) - row_shift));
                     }
                 }
